<resources>
    <string name="app_name">EnglishVowelsSounds</string>
    <string name="skip">Skip</string>
    <string name="close">Close</string>
    <string name="continueQuestion">Continue</string>
    <string name="action_settings">Settings</string>
    <string name="profile_name">Name</string>
    <string name="profile_age">Age</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_top_score">Top Score</string>
    <string name="profile_female_radio_button">Female</string>
    <string name="profile_male_radio_button">Male</string>
    <string name="profile_save_button">Save</string>
    <string name="menu_option_profile">Profile</string>




</resources>
